--- a/data/Info Pluviometrica.ipynb
+++ b/data/Info Pluviometrica.ipynb
@@ -14,6 +14,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "SAVE = False # Save to file\n",
+    "#------------------------\n",
+    "\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_columns', 500)\n",
     "\n",
@@ -24,12 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Functions\n",
     "\n",
+    "## Clean\n",
     "def clean(df, file, save = True):\n",
     "\n",
     "    df.columns = (list(df.iloc[2].values)) # Get column names\n",
@@ -43,17 +47,18 @@
     "    df.insert(0, 'Data','')\n",
     "    df.insert(1, 'Hora','')\n",
     "    df[['Data', 'Hora']] = df['Data / Hora'].str.split(expand = True)\n",
-    "    df.drop('Data / Hora', axis = 1, inplace = True) # Split into 2 columns\n",
-    "\n",
-    "    drop_cols = [3, 5, 6, 9, 11, 12, 14, 16, 19, 21]\n",
+    "    #df.drop('Data / Hora', axis = 1, inplace = True) # Split into 2 columns\n",
+    "    \n",
+    "    drop_cols = [4, 6, 7, 10, 12, 14, 15, 17, 20, 22 ]\n",
+    "    #    drop_cols = [3, 5, 6, 9, 11, 12, 14, 16, 19, 2]\n",
     "    df = df.drop(df.columns[drop_cols],axis=1)\n",
     "\n",
-    "    col_names = ['Data', 'Hora', 'UmidadeRelativa',\n",
-    "              'PressaoAtmosferica', 'TemperaturaDoAr',\n",
-    "              'TemperaturaInterna', 'PontoDeOrvalho',\n",
-    "              'SensacaoTermica', 'RadiacaoSolar',\n",
-    "              'DirecaoDoVento', 'VelocidadeDoVento',\n",
-    "              'Precipitacao']\n",
+    "    col_names = ['Data', 'Hora', 'Data / Hora',\n",
+    "                 'UmidadeRelativa', 'PressaoAtmosferica',\n",
+    "                 'Temperatura do Ar', 'TemperaturaInterna',\n",
+    "                 'PontoDeOrvalho', 'SensacaoTermica',\n",
+    "                 'RadiacaoSolar', 'DirecaoDoVento',\n",
+    "                 'VelocidadeDoVento', 'Precipitacao']\n",
     "    df.columns = col_names   \n",
     "\n",
     "    df['Local'] = os.path.basename(file).split()[0].split('_')[0]\n",
@@ -70,6 +75,8 @@
     "    df.to_csv(save_path, sep = ';', index = False)\n",
     "    \n",
     "    \n",
+    "## Concatanate\n",
+    "\n",
     "def concatanate(df_list, name, save = True):\n",
     "    if df_list:\n",
     "        df = pd.concat(df_list, axis = 0)\n",
@@ -85,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +101,7 @@
        "90"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,6 +119,13 @@
     "            files.append(os.path.join(r, file))\n",
     "            \n",
     "len(files) # Should be 90!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Clean"
    ]
   },
   {
@@ -264,7 +278,7 @@
     }
    ],
    "source": [
-    "dic = {directory: [] for directoriy in directories}\n",
+    "dic = {directory: [] for directory in directories}\n",
     "\n",
     "#Load cleaned data into dictonary\n",
     "i = 0\n",
@@ -274,18 +288,93 @@
     "            print(f'{i}/{len(files)}')\n",
     "            filename = os.path.basename(file)\n",
     "            df = pd.read_excel(file)\n",
-    "            dic[d].append( clean(df, file, False))\n",
+    "            dic[d].append( clean(df, file, SAVE) )\n",
     "            i += 1"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Concatanate"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for d in directories:\n",
-    "    concatanate(dic[d], d, True) # Concatanate and save"
+    "if SAVE:\n",
+    "    for d in directories:\n",
+    "        concatanate(dic[d], d, SAVE) # Concatanate and save\n",
+    "else:\n",
+    "    concatanated = {}\n",
+    "    for d in directories:\n",
+    "        concatanated[d] = concatanate(dic[d], d, SAVE) # Concatanate and save"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keys = list(concatanated.keys())\n",
+    "estacao0 = concatanated[keys[0]].copy( deep = True)\n",
+    "estacao1 = concatanated[keys[1]].copy( deep = True)\n",
+    "estacao2 = concatanated[keys[2]].copy( deep = True)\n",
+    "estacao3 = concatanated[keys[3]].copy( deep = True)\n",
+    "estacao4 = concatanated[keys[4]].copy( deep = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estacao4.drop(columns=['Data', 'Hora'], inplace = True)\n",
+    "\n",
+    "new_cols = []\n",
+    "for col in estacao4.columns:\n",
+    "    if col != 'Data / Hora':\n",
+    "        col = col + '_4'\n",
+    "    new_cols.append(col)\n",
+    "    \n",
+    "estacao4.columns = new_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estacao0.drop(columns=['Data', 'Hora'], inplace = True)\n",
+    "estacao1.drop(columns=['Data', 'Hora'], inplace = True)\n",
+    "merge1 = estacao0.merge(estacao1, on = 'Data / Hora', how = 'outer', suffixes = ('_0', '_1'))\n",
+    "\n",
+    "estacao2.drop(columns=['Data', 'Hora'], inplace = True)\n",
+    "estacao3.drop(columns=['Data', 'Hora'], inplace = True)\n",
+    "merge2 = estacao2.merge(estacao3, on = 'Data / Hora', how = 'outer', suffixes = ('_2', '_3'))\n",
+    "\n",
+    "merge3 = merge1.merge(merge2, on = 'Data / Hora', how = 'outer')\n",
+    "merged = merge3.merge(estacao4, on = 'Data / Hora', how = 'outer')\n",
+    "\n",
+    "merged.insert(0, 'Data','')\n",
+    "merged.insert(1, 'Hora','')\n",
+    "df[['Data', 'Hora']] = merged['Data / Hora'].str.split(expand = True)\n",
+    "\n",
+    "if SAVE:\n",
+    "    merged.to_csv('./cleandata/Info pluviometricas/Merged Data/merged.csv', sep = ';', index = False)"
    ]
   },
   {
