Create dir if missing

--- a/data/Clean - Ordens de serviço - Enchentes.ipynb
+++ b/data/Clean - Ordens de serviço - Enchentes.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-10-31T17:14:50.265325Z",
@@ -12,6 +19,24 @@
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create dir\n",
+    "\n",
+    "from os import mkdir\n",
+    "from os import path\n",
+    "\n",
+    "if not path.exists(\"./cleandata\"):\n",
+    "    mkdir('./cleandata')\n",
+    "    \n",
+    "if not path.exists(\"./cleandata/Ordens de serviço\"):\n",
+    "    mkdir('./cleandata/Ordens de serviço')"
    ]
   },
   {
@@ -32,7 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "os = pd.read_excel('./rawdata/Ordens de serviço/Enchentes - 01012010 a 30092019.xlsx')"
+    "oser = pd.read_excel('./rawdata/Ordens de serviço/Enchentes - 01012010 a 30092019.xlsx')"
    ]
   },
   {
