--- a/data/Info Pluviometrica.ipynb
+++ b/data/Info Pluviometrica.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,20 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "90"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = './rawdata/Info pluviometricas'\n",
     "\n",
@@ -122,6 +111,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create dir\n",
+    "\n",
+    "from os import mkdir\n",
+    "\n",
+    "if not os.path.exists(\"./cleandata\"):\n",
+    "    mkdir('./cleandata')\n",
+    "    \n",
+    "if not os.path.exists(\"./cleandata/Info pluviometricas\"):\n",
+    "    mkdir('./cleandata/Info pluviometricas')\n",
+    "    \n",
+    "for directory in directories:\n",
+    "    path_ = os.path.join(\"./cleandata/Info pluviometricas\", directory)\n",
+    "    if not os.path.exists(path_):\n",
+    "        mkdir(path_)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -130,153 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0/90\n",
-      "1/90\n",
-      "2/90\n",
-      "3/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "4/90\n",
-      "5/90\n",
-      "6/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "7/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "8/90\n",
-      "9/90\n",
-      "10/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "11/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "12/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "13/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "14/90\n",
-      "15/90\n",
-      "16/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "17/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "18/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "19/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "20/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "21/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "22/90\n",
-      "23/90\n",
-      "24/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "25/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "26/90\n",
-      "27/90\n",
-      "28/90\n",
-      "29/90\n",
-      "30/90\n",
-      "31/90\n",
-      "32/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "33/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "34/90\n",
-      "35/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "36/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "37/90\n",
-      "38/90\n",
-      "39/90\n",
-      "40/90\n",
-      "41/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "42/90\n",
-      "43/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "44/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "45/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "46/90\n",
-      "47/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "48/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "49/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "50/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "51/90\n",
-      "52/90\n",
-      "53/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "54/90\n",
-      "55/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "56/90\n",
-      "57/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "58/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "59/90\n",
-      "60/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "61/90\n",
-      "62/90\n",
-      "63/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "64/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "65/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "66/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "67/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "68/90\n",
-      "69/90\n",
-      "70/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "71/90\n",
-      "72/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "73/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "74/90\n",
-      "75/90\n",
-      "76/90\n",
-      "77/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "78/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "79/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "80/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "81/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "82/90\n",
-      "83/90\n",
-      "84/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
-      "85/90\n",
-      "86/90\n",
-      "87/90\n",
-      "88/90\n",
-      "89/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dic = {directory: [] for directory in directories}\n",
     "\n",
@@ -301,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,6 +182,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "concatanated"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -323,7 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +257,16 @@
     "df[['Data', 'Hora']] = merged['Data / Hora'].str.split(expand = True)\n",
     "\n",
     "if SAVE:\n",
-    "    merged.to_csv('./cleandata/Info pluviometricas/Merged Data/merged.csv', sep = ';', index = False)"
+    "    merged.to_csv('./cleandata/Info pluviometricas/Merged Data/merged.csv',decimal = ',', sep = ';', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged.to_csv('./cleandata/Info pluviometricas/Merged Data/merged.csv',decimal = ',', sep = ';', index = False)"
    ]
   },
   {
