--- a/data/Info Pluviometrica.ipynb
+++ b/data/Info Pluviometrica.ipynb
@@ -10,11 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAVE = False # Save to file\n",
+    "SAVE = True # Save to file\n",
     "#------------------------\n",
     "\n",
     "import pandas as pd\n",
@@ -22,12 +22,14 @@
     "\n",
     "import numpy as np\n",
     "import sys\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "from os import mkdir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +84,7 @@
     "        df = pd.concat(df_list, axis = 0)\n",
     "        if save:\n",
     "            save_concat(df, name)\n",
+    "            return df\n",
     "        else:\n",
     "            return df\n",
     "\n",
@@ -92,9 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "path = './rawdata/Info pluviometricas'\n",
     "\n",
@@ -112,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +136,12 @@
     "\n",
     "if not os.path.exists(\"./cleandata\"):\n",
     "    mkdir('./cleandata')\n",
-    "    \n",
+    "\n",
     "if not os.path.exists(\"./cleandata/Info pluviometricas\"):\n",
     "    mkdir('./cleandata/Info pluviometricas')\n",
+    "    \n",
+    "if not os.path.exists(\"./cleandata/Info pluviometricas/Concatanated Data/\"):\n",
+    "    mkdir('./cleandata/Info pluviometricas/Concatanated Data/')\n",
     "    \n",
     "for directory in directories:\n",
     "    path_ = os.path.join(\"./cleandata/Info pluviometricas\", directory)\n",
@@ -141,9 +158,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "1/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "2/90\n",
+      "3/90\n",
+      "4/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "5/90\n",
+      "6/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "7/90\n",
+      "8/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "9/90\n",
+      "10/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "11/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "12/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "13/90\n",
+      "14/90\n",
+      "15/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "16/90\n",
+      "17/90\n",
+      "18/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "19/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "20/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "21/90\n",
+      "22/90\n",
+      "23/90\n",
+      "24/90\n",
+      "25/90\n",
+      "26/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "27/90\n",
+      "28/90\n",
+      "29/90\n",
+      "30/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "31/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "32/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "33/90\n",
+      "34/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "35/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "36/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "37/90\n",
+      "38/90\n",
+      "39/90\n",
+      "40/90\n",
+      "41/90\n",
+      "42/90\n",
+      "43/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "44/90\n",
+      "45/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "46/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "47/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "48/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "49/90\n",
+      "50/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "51/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "52/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "53/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "54/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "55/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "56/90\n",
+      "57/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "58/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "59/90\n",
+      "60/90\n",
+      "61/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "62/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "63/90\n",
+      "64/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "65/90\n",
+      "66/90\n",
+      "67/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "68/90\n",
+      "69/90\n",
+      "70/90\n",
+      "71/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "72/90\n",
+      "73/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "74/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "75/90\n",
+      "76/90\n",
+      "77/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "78/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "79/90\n",
+      "80/90\n",
+      "81/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "82/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "83/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "84/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "85/90\n",
+      "86/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "87/90\n",
+      "88/90\n",
+      "89/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n"
+     ]
+    }
+   ],
    "source": [
     "dic = {directory: [] for directory in directories}\n",
     "\n",
@@ -168,26 +329,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "concatanated = {}\n",
     "if SAVE:\n",
     "    for d in directories:\n",
-    "        concatanate(dic[d], d, SAVE) # Concatanate and save\n",
+    "        concatanated[d] = concatanate(dic[d], d, SAVE) # Concatanate and save\n",
     "else:\n",
-    "    concatanated = {}\n",
     "    for d in directories:\n",
     "        concatanated[d] = concatanate(dic[d], d, SAVE) # Concatanate and save"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "concatanated"
    ]
   },
   {
@@ -199,14 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,25 +402,11 @@
     "df[['Data', 'Hora']] = merged['Data / Hora'].str.split(expand = True)\n",
     "\n",
     "if SAVE:\n",
-    "    merged.to_csv('./cleandata/Info pluviometricas/Merged Data/merged.csv',decimal = ',', sep = ';', index = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged.to_csv('./cleandata/Info pluviometricas/Merged Data/merged.csv',decimal = ',', sep = ';', index = False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "# Testing\n",
-    "---"
+    "    if not os.path.isdir('./cleandata/Info pluviometricas/Merged Data/'):\n",
+    "        mkdir('./cleandata/Info pluviometricas/Merged Data/')\n",
+    "    \n",
+    "    merged.to_csv('./cleandata/Info pluviometricas/Merged Data/merged.csv',\n",
+    "                  decimal = ',', sep = ';', index = False)"
    ]
   }
  ],
