repair data regions - lowpass + derivative

--- a/data/Clean - Info Pluviometrica.ipynb
+++ b/data/Clean - Info Pluviometrica.ipynb
@@ -15,6 +15,7 @@
    "outputs": [],
    "source": [
     "SAVE = True # Save to file\n",
+    "INCLUDE_MEAN = True # Include mean of all 4 stations on merged dataframe\n",
     "#------------------------\n",
     "\n",
     "import pandas as pd\n",
@@ -37,7 +38,9 @@
     "\n",
     "## Clean\n",
     "def clean(df, file, save = True):\n",
-    "\n",
+    "    '''\n",
+    "    clean - Clean each file and save as a single csv - This results in multiple files for the same station\n",
+    "    '''\n",
     "    df.columns = (list(df.iloc[2].values)) # Get column names\n",
     "    df = df.loc[:, df.columns.notnull()]   # Remove nan columns\n",
     "    df = df[~((df['Data / Hora'] == 'Data / Hora') &\n",
@@ -62,12 +65,10 @@
     "                 'RadiacaoSolar', 'DirecaoDoVento',\n",
     "                 'VelocidadeDoVento', 'Precipitacao']\n",
     "    df.columns = col_names   \n",
-    "\n",
     "    df['Local'] = os.path.basename(file).split()[0].split('_')[0]\n",
     "\n",
     "    if save:\n",
     "        save_to_file(df, file)\n",
-    "    \n",
     "    return df\n",
     "\n",
     "def save_to_file(df, file):\n",
@@ -77,9 +78,10 @@
     "    df.to_csv(save_path, sep = ';', index = False)\n",
     "    \n",
     "    \n",
-    "## Concatanate\n",
-    "\n",
     "def concatanate(df_list, name, save = True):\n",
+    "    '''\n",
+    "    concatanate - For each station turn mutiples files into one\n",
+    "    '''\n",
     "    if df_list:\n",
     "        df = pd.concat(df_list, axis = 0)\n",
     "        if save:\n",
@@ -90,7 +92,18 @@
     "\n",
     "def save_concat(df, name, path = './cleandata/Info pluviometricas/Concatanated Data/'):\n",
     "    file = os.path.join(path, name) + '.csv'\n",
-    "    df.to_csv(file, sep = ';', index = False)"
+    "    df.to_csv(file, sep = ';', index = False)\n",
+    "    \n",
+    "def include_mean(df):\n",
+    "    col_names = ['UmidadeRelativa_', 'PressaoAtmosferica_', 'SensacaoTermica_', \n",
+    "                 'RadiacaoSolar_', 'DirecaoDoVento_', 'VelocidadeDoVento_', 'Precipitacao_',\n",
+    "                 'PontoDeOrvalho_', 'Temperatura do Ar_', 'TemperaturaInterna_']\n",
+    "    \n",
+    "    for col_name in col_names:\n",
+    "        selected_cols = [col for col in df.columns if col_name in col]\n",
+    "        new_name = col_name + 'mean'\n",
+    "        df[new_name] = df[selected_cols].mean(axis = 1, skipna = True)\n",
+    "    return df"
    ]
   },
   {
@@ -168,9 +181,10 @@
       "0/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "1/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "2/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "3/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "4/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "5/90\n",
@@ -180,8 +194,8 @@
       "8/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "9/90\n",
-      "10/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "10/90\n",
       "11/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "12/90\n",
@@ -189,115 +203,114 @@
       "13/90\n",
       "14/90\n",
       "15/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "16/90\n",
       "17/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "18/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "19/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "20/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "21/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "22/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "23/90\n",
       "24/90\n",
-      "25/90\n",
-      "26/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "25/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "26/90\n",
       "27/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "28/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "29/90\n",
       "30/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "31/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "32/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "33/90\n",
       "34/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "35/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "36/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "37/90\n",
       "38/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "39/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "40/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "41/90\n",
       "42/90\n",
-      "43/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "43/90\n",
       "44/90\n",
       "45/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "46/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "47/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "48/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "49/90\n",
       "50/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "51/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "52/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "53/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "54/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "55/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "56/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "57/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "58/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "59/90\n",
       "60/90\n",
-      "61/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "61/90\n",
       "62/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "63/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "64/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "65/90\n",
-      "66/90\n",
-      "67/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "66/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "67/90\n",
       "68/90\n",
       "69/90\n",
       "70/90\n",
       "71/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "72/90\n",
-      "73/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "73/90\n",
       "74/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "75/90\n",
-      "76/90\n",
-      "77/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "76/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
+      "77/90\n",
       "78/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "79/90\n",
       "80/90\n",
+      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "81/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "82/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "83/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "84/90\n",
       "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "85/90\n",
       "86/90\n",
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n",
       "87/90\n",
       "88/90\n",
       "89/90\n",
@@ -334,12 +347,9 @@
    "outputs": [],
    "source": [
     "concatanated = {}\n",
-    "if SAVE:\n",
-    "    for d in directories:\n",
-    "        concatanated[d] = concatanate(dic[d], d, SAVE) # Concatanate and save\n",
-    "else:\n",
-    "    for d in directories:\n",
-    "        concatanated[d] = concatanate(dic[d], d, SAVE) # Concatanate and save"
+    "for d in directories:\n",
+    "    # Concatanate and save\n",
+    "    concatanated[d] = concatanate(dic[d], d, SAVE) "
    ]
   },
   {
@@ -356,11 +366,11 @@
    "outputs": [],
    "source": [
     "keys = list(concatanated.keys())\n",
-    "estacao0 = concatanated[keys[0]].copy( deep = True)\n",
-    "estacao1 = concatanated[keys[1]].copy( deep = True)\n",
-    "estacao2 = concatanated[keys[2]].copy( deep = True)\n",
-    "estacao3 = concatanated[keys[3]].copy( deep = True)\n",
-    "estacao4 = concatanated[keys[4]].copy( deep = True)"
+    "estacao0 = concatanated[keys[0]].copy( deep = True).drop(columns=['Data', 'Hora'])\n",
+    "estacao1 = concatanated[keys[1]].copy( deep = True).drop(columns=['Data', 'Hora'])\n",
+    "estacao2 = concatanated[keys[2]].copy( deep = True).drop(columns=['Data', 'Hora'])\n",
+    "estacao3 = concatanated[keys[3]].copy( deep = True).drop(columns=['Data', 'Hora'])\n",
+    "estacao4 = concatanated[keys[4]].copy( deep = True).drop(columns=['Data', 'Hora'])"
    ]
   },
   {
@@ -369,15 +379,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estacao4.drop(columns=['Data', 'Hora'], inplace = True)\n",
+    "merge1 = estacao0.merge(estacao1, on = 'Data / Hora', how = 'outer', suffixes = ('_0', '_1'))\n",
+    "merge2 = estacao2.merge(estacao3, on = 'Data / Hora', how = 'outer', suffixes = ('_2', '_3'))\n",
+    "merge3 = merge1.merge(merge2, on = 'Data / Hora', how = 'outer')\n",
     "\n",
+    "# Manualy ad suffixes to estacao4\n",
     "new_cols = []\n",
     "for col in estacao4.columns:\n",
     "    if col != 'Data / Hora':\n",
     "        col = col + '_4'\n",
     "    new_cols.append(col)\n",
+    "estacao4.columns = new_cols\n",
+    "\n",
+    "merged = merge3.merge(estacao4, on = 'Data / Hora', how = 'outer')\n",
+    "\n",
+    "merged.insert(0, 'Data','')\n",
+    "merged.insert(1, 'Hora','')\n",
+    "merged[['Data', 'Hora']] = merged['Data / Hora'].str.split(expand = True)\n",
+    "\n",
+    "merged_mean = include_mean(merged)\n",
+    "\n",
+    "if SAVE:\n",
+    "    if not os.path.isdir('./cleandata/Info pluviometricas/Merged Data/'):\n",
+    "        mkdir('./cleandata/Info pluviometricas/Merged Data/')\n",
     "    \n",
-    "estacao4.columns = new_cols"
+    "    merged_mean.to_csv('./cleandata/Info pluviometricas/Merged Data/merged.csv',\n",
+    "                  decimal = '.', sep = ';', index = False)"
    ]
   },
   {
@@ -386,27 +413,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estacao0.drop(columns=['Data', 'Hora'], inplace = True)\n",
-    "estacao1.drop(columns=['Data', 'Hora'], inplace = True)\n",
-    "merge1 = estacao0.merge(estacao1, on = 'Data / Hora', how = 'outer', suffixes = ('_0', '_1'))\n",
-    "\n",
-    "estacao2.drop(columns=['Data', 'Hora'], inplace = True)\n",
-    "estacao3.drop(columns=['Data', 'Hora'], inplace = True)\n",
-    "merge2 = estacao2.merge(estacao3, on = 'Data / Hora', how = 'outer', suffixes = ('_2', '_3'))\n",
-    "\n",
-    "merge3 = merge1.merge(merge2, on = 'Data / Hora', how = 'outer')\n",
-    "merged = merge3.merge(estacao4, on = 'Data / Hora', how = 'outer')\n",
-    "\n",
-    "merged.insert(0, 'Data','')\n",
-    "merged.insert(1, 'Hora','')\n",
-    "df[['Data', 'Hora']] = merged['Data / Hora'].str.split(expand = True)\n",
-    "\n",
-    "if SAVE:\n",
-    "    if not os.path.isdir('./cleandata/Info pluviometricas/Merged Data/'):\n",
-    "        mkdir('./cleandata/Info pluviometricas/Merged Data/')\n",
-    "    \n",
-    "    merged.to_csv('./cleandata/Info pluviometricas/Merged Data/merged.csv',\n",
-    "                  decimal = ',', sep = ';', index = False)"
+    " merged_mean.to_csv('./cleandata/Info pluviometricas/Merged Data/merged.csv',\n",
+    "                  decimal = '.', sep = ';', index = False)"
    ]
   }
  ],
