--- a/data/Get LAT_LNG - Enchentes.ipynb
+++ b/data/Get LAT_LNG - Enchentes.ipynb
@@ -256,9 +256,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37464bitbaseconda7e5673f44381479f842fe1694b809563"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
