--- a/develop/Notebooks/1_Clean/Clean - Info Pluviometrica.ipynb
+++ b/develop/Notebooks/1_Clean/Clean - Info Pluviometrica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,27 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "## Clean - INFO:  creating directory: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Paraiso\n",
-      "## Clean - INFO:  creating directory: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Erasmo Assunção\n",
-      "## Clean - INFO:  creating directory: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Camilopolis\n",
-      "## Clean - INFO:  creating directory: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/RM 9\n",
-      "## Clean - INFO:  creating directory: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Vitória\n",
-      "## Clean - INFO:  creating directory: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Concatanated Data/\n",
-      "## Clean - INFO:  creating directory: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Concatanated Data/Paraiso\n",
-      "## Clean - INFO:  creating directory: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Concatanated Data/Erasmo Assunção\n",
-      "## Clean - INFO:  creating directory: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Concatanated Data/Camilopolis\n",
-      "## Clean - INFO:  creating directory: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Concatanated Data/RM 9\n",
-      "## Clean - INFO:  creating directory: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Concatanated Data/Vitória\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create dir\n",
     "_path = pjoin(root, \"data/cleandata\")\n",
@@ -180,17 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "## Clean - INFO:  loading  90/90  files\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load csvs\n",
     "dic = {directory: [] for directory in directories}\n",
@@ -201,108 +175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "## Clean - INFO:  1/90\n",
-      "## Clean - INFO:  2/90\n",
-      "## Clean - INFO:  3/90\n",
-      "## Clean - INFO:  4/90\n",
-      "## Clean - INFO:  5/90\n",
-      "## Clean - INFO:  6/90\n",
-      "## Clean - INFO:  7/90\n",
-      "## Clean - INFO:  8/90\n",
-      "## Clean - INFO:  9/90\n",
-      "## Clean - INFO:  10/90\n",
-      "## Clean - INFO:  11/90\n",
-      "## Clean - INFO:  12/90\n",
-      "## Clean - INFO:  13/90\n",
-      "## Clean - INFO:  14/90\n",
-      "## Clean - INFO:  15/90\n",
-      "## Clean - INFO:  16/90\n",
-      "## Clean - INFO:  17/90\n",
-      "## Clean - INFO:  18/90\n",
-      "## Clean - INFO:  19/90\n",
-      "## Clean - INFO:  20/90\n",
-      "## Clean - INFO:  21/90\n",
-      "## Clean - INFO:  22/90\n",
-      "## Clean - INFO:  23/90\n",
-      "## Clean - INFO:  24/90\n",
-      "## Clean - INFO:  25/90\n",
-      "## Clean - INFO:  26/90\n",
-      "## Clean - INFO:  27/90\n",
-      "## Clean - INFO:  28/90\n",
-      "## Clean - INFO:  29/90\n",
-      "## Clean - INFO:  30/90\n",
-      "## Clean - INFO:  31/90\n",
-      "## Clean - INFO:  32/90\n",
-      "## Clean - INFO:  33/90\n",
-      "## Clean - INFO:  34/90\n",
-      "## Clean - INFO:  35/90\n",
-      "## Clean - INFO:  36/90\n",
-      "## Clean - INFO:  37/90\n",
-      "## Clean - INFO:  38/90\n",
-      "## Clean - INFO:  39/90\n",
-      "## Clean - INFO:  40/90\n",
-      "## Clean - INFO:  41/90\n",
-      "## Clean - INFO:  42/90\n",
-      "## Clean - INFO:  43/90\n",
-      "## Clean - INFO:  44/90\n",
-      "## Clean - INFO:  45/90\n",
-      "## Clean - INFO:  46/90\n",
-      "## Clean - INFO:  47/90\n",
-      "## Clean - INFO:  48/90\n",
-      "## Clean - INFO:  49/90\n",
-      "## Clean - INFO:  50/90\n",
-      "## Clean - INFO:  51/90\n",
-      "## Clean - INFO:  52/90\n",
-      "## Clean - INFO:  53/90\n",
-      "## Clean - INFO:  54/90\n",
-      "## Clean - INFO:  55/90\n",
-      "## Clean - INFO:  56/90\n",
-      "## Clean - INFO:  57/90\n",
-      "## Clean - INFO:  58/90\n",
-      "## Clean - INFO:  59/90\n",
-      "## Clean - INFO:  60/90\n",
-      "## Clean - INFO:  61/90\n",
-      "## Clean - INFO:  62/90\n",
-      "## Clean - INFO:  63/90\n",
-      "## Clean - INFO:  64/90\n",
-      "## Clean - INFO:  65/90\n",
-      "## Clean - INFO:  66/90\n",
-      "## Clean - INFO:  67/90\n",
-      "## Clean - INFO:  68/90\n",
-      "## Clean - INFO:  69/90\n",
-      "## Clean - INFO:  70/90\n",
-      "## Clean - INFO:  71/90\n",
-      "## Clean - INFO:  72/90\n",
-      "## Clean - INFO:  73/90\n",
-      "## Clean - INFO:  74/90\n",
-      "## Clean - INFO:  75/90\n",
-      "## Clean - INFO:  76/90\n",
-      "## Clean - INFO:  77/90\n",
-      "## Clean - INFO:  78/90\n",
-      "## Clean - INFO:  79/90\n",
-      "## Clean - INFO:  80/90\n",
-      "## Clean - INFO:  81/90\n",
-      "## Clean - INFO:  82/90\n",
-      "## Clean - INFO:  83/90\n",
-      "## Clean - INFO:  84/90\n",
-      "## Clean - INFO:  85/90\n",
-      "## Clean - INFO:  86/90\n",
-      "## Clean - INFO:  87/90\n",
-      "## Clean - INFO:  88/90\n",
-      "## Clean - INFO:  89/90\n",
-      "## Clean - INFO:  90/90\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = 0\n",
     "for file in files:\n",
@@ -318,28 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "## Clean - INFO:  merging files\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "$$$$ saving: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Concatanated Data/Paraiso/Paraiso.csv\n",
-      "$$$$ saving: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Concatanated Data/Erasmo Assunção/Erasmo Assunção.csv\n",
-      "$$$$ saving: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Concatanated Data/Camilopolis/Camilopolis.csv\n",
-      "$$$$ saving: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Concatanated Data/RM 9/RM 9.csv\n",
-      "$$$$ saving: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Concatanated Data/Vitória/Vitória.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Concatanate and save\n",
     "logging.info(' merging files')\n",
@@ -351,17 +209,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Merge\n",
     "keys = list(concatanated.keys())\n",
-    "estacao0 = concatanated[keys[0]].copy( deep = True).drop(columns=['Data', 'Hora'])\n",
-    "estacao1 = concatanated[keys[1]].copy( deep = True).drop(columns=['Data', 'Hora'])\n",
-    "estacao2 = concatanated[keys[2]].copy( deep = True).drop(columns=['Data', 'Hora'])\n",
-    "estacao3 = concatanated[keys[3]].copy( deep = True).drop(columns=['Data', 'Hora'])\n",
-    "estacao4 = concatanated[keys[4]].copy( deep = True).drop(columns=['Data', 'Hora'])\n",
+    "estacao0 = concatanated[keys[0]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
+    "estacao1 = concatanated[keys[1]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
+    "estacao2 = concatanated[keys[2]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
+    "estacao3 = concatanated[keys[3]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
+    "estacao4 = concatanated[keys[4]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
     "\n",
     "merge1 = estacao0.merge(estacao1, on = 'Data / Hora', how = 'outer', suffixes = ('_0', '_1'))\n",
     "merge2 = estacao2.merge(estacao3, on = 'Data / Hora', how = 'outer', suffixes = ('_2', '_3'))\n",
@@ -370,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,12 +244,16 @@
     "\n",
     "merged.insert(0, 'Data','')\n",
     "merged.insert(1, 'Hora','')\n",
-    "merged[['Data', 'Hora']] = merged['Data / Hora'].str.split(expand = True)"
+    "merged[['Data', 'Hora']] = merged['Data / Hora'].str.split(expand = True)\n",
+    "\n",
+    "# Sort By Data / Hora\n",
+    "merged['Data / Hora'] = pd.to_datetime(merged['Data / Hora'])\n",
+    "merged = merged.sort_values('Data / Hora').reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,19 +263,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "## Clean - INFO:  saving files\n",
-      "## Clean - INFO:  creating directory: /home/felipe/Documents/TCC/data/cleandata/Info pluviometricas/Merged Data/\n",
-      "## Clean - INFO:  done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if SAVE:\n",
     "    logging.info(' saving files')\n",
@@ -444,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
