Refactor project structure

--- a/src/Notebooks/1_Clean/Clean - Info Pluviometrica.ipynb
+++ b/src/Notebooks/1_Clean/Clean - Info Pluviometrica.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "SAVE = True # Merged files\n",
     "SAVE_SINGLES = True # Save each individual xls file into csv\n",
-    "SAVE_CONCATANATED = True # Save each station as a csv file\n",
+    "SAVE_CONCATENATED = True # Save each station as a csv file\n",
     "INCLUDE_MEAN = False # Include mean of all 4 stations on merged dataframe"
    ]
   },
@@ -86,9 +86,9 @@
     "    #logging.info('saving to ', save_path, '\\n')\n",
     "    df.to_csv(save_path, sep = ';', index = False)\n",
     "       \n",
-    "def concatanate(df_list, name, concat_path ,save = True):\n",
+    "def concatenate(df_list, name, concat_path ,save = True):\n",
     "    '''\n",
-    "    concatanate - For each station turn mutiples files into one\n",
+    "    concatenate - For each station turn mutiples files into one\n",
     "    '''\n",
     "    if df_list:\n",
     "        df = pd.concat(df_list, axis = 0)\n",
@@ -151,12 +151,12 @@
     "        _path = pjoin(root ,\"data/cleandata/Info pluviometricas\", directory)\n",
     "        create_dir(_path)\n",
     "\n",
-    "if SAVE_CONCATANATED:\n",
-    "    _path = pjoin(root, \"data/cleandata/Info pluviometricas/Concatanated Data/\")\n",
+    "if SAVE_CONCATENATED:\n",
+    "    _path = pjoin(root, \"data/cleandata/Info pluviometricas/Concatenated Data/\")\n",
     "    create_dir(_path)\n",
     "    \n",
     "    for directory in directories:\n",
-    "        _path = pjoin(root ,\"data/cleandata/Info pluviometricas/Concatanated Data\", directory)\n",
+    "        _path = pjoin(root ,\"data/cleandata/Info pluviometricas/Concatenated Data\", directory)\n",
     "        create_dir(_path)"
    ]
   },
@@ -201,10 +201,10 @@
    "source": [
     "# Concatanate and save\n",
     "logging.info(' merging files')\n",
-    "concatanated = {}\n",
+    "concatenated = {}\n",
     "for d in directories:\n",
-    "    _path = pjoin(root ,\"data/cleandata/Info pluviometricas/Concatanated Data\", d)\n",
-    "    concatanated[d] = concatanate(dic[d], d, _path, SAVE_CONCATANATED) "
+    "    _path = pjoin(root ,\"data/cleandata/Info pluviometricas/Concatenated Data\", d)\n",
+    "    concatenated[d] = concatenate(dic[d], d, _path, SAVE_CONCATENATED) "
    ]
   },
   {
@@ -214,12 +214,12 @@
    "outputs": [],
    "source": [
     "# Merge\n",
-    "keys = list(concatanated.keys())\n",
-    "estacao0 = concatanated[keys[0]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
-    "estacao1 = concatanated[keys[1]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
-    "estacao2 = concatanated[keys[2]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
-    "estacao3 = concatanated[keys[3]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
-    "estacao4 = concatanated[keys[4]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
+    "keys = list(concatenated.keys())\n",
+    "estacao0 = concatenated[keys[0]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
+    "estacao1 = concatenated[keys[1]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
+    "estacao2 = concatenated[keys[2]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
+    "estacao3 = concatenated[keys[3]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
+    "estacao4 = concatenated[keys[4]].drop(columns=['Data', 'Hora']).drop_duplicates(subset = ['Data / Hora'])\n",
     "\n",
     "merge1 = estacao0.merge(estacao1, on = 'Data / Hora', how = 'outer', suffixes = ('_0', '_1'))\n",
     "merge2 = estacao2.merge(estacao3, on = 'Data / Hora', how = 'outer', suffixes = ('_2', '_3'))\n",
